2002-07-04  Terry Biggs <tbiggs@users.sourceforge.net>

	* renamed gui/_percomm.h to gui/percomm.h
	* renamed gnome/_percomm.c to gnome/percomm.c


2002-07-03  Terry Biggs <tbiggs@users.sourceforge.net>

	* gbs panes are now
	  created when needed not on startup.



2002-07-02  Terry Biggs <tbiggs@users.sourceforge.net>

	* added backend/sword_defs.h
	* Bibletext, commentary, and dictlex panes are now
	  created when needed not on startup.
	

2002-07-01  Terry Biggs <tbiggs@users.sourceforge.net>

	* removed /backend/viewcomm.*
	* removed /backend/viewdict.*
	* removed /backend/bibletext_view_.*
	* changed gnome/commentary_dialog.c to open multiple dialogs.
	* changed gnome/dictlex_dialog.c to open multiple dialogs.
	* added gnome/gtkhtml_display.c and gui/gtkhtml_display.h these 
	  will replace backend/display.* eventually


2002-06-26  Terry Biggs <tbiggs@users.sourceforge.net>

	* changed gnome/bibletext_dialog.c to open multiple dialogs.


2002-06-22  Terry Biggs <tbiggs@users.sourceforge.net>

	* renamed gui/_dictlex.h to gui/dictlex.h
	* renamed gnome/_dictlex.c to gnome/dictlex.c
	

2002-06-22  Terry Biggs <tbiggs@users.sourceforge.net>

	* renamed gui/_bibletext.h to gui/bibletext.h
	* renamed gnome/_bibletext.c to gnome/bibletext.c
	* renamed gui/_commentary.h to gui/commentary.h
	* renamed gnome/_commentary.c to gnome/commentary.c

2002-06-21  Terry Biggs <tbiggs@users.sourceforge.net>

	* renamed gui/_gbs.h to gui/gbs.h
	* renamed gnome/_gbs.c to gnome/gbs.c
	

2002-06-08  Victor Porton  <porton@localhost>

	* fixed src/main/commentary.c: crashed displaying the commentary
	when no commentary

	* fixed src/main/gs_interlinear.c: again works when not all
	interlinear modules are present

2002-06-06  Terry Biggs <tbiggs@users.sourceforge.net>

	* added frame label to docked interlinear and studypad to
	  give a more uniform look.
	


2002-06-05  Terry Biggs <tbiggs@users.sourceforge.net>

	* renamed gnome/_bibletext_view.* to gnome/bibletext_dialog.*